--- a/airbnb-clone/src/Banner.css
+++ b/airbnb-clone/src/Banner.css
@@ -1,5 +1,44 @@
 .banner {
-    background: url("") center center;
+    background: url("https://images.squarespace-cdn.com/content/v1/5cab561c797f7475f98c2f5e/1559666028788-FTHPRWXTXIRG96LZF2T5/home-banner.jpg?format=2500w") center center;
     height: 50vh;
     position: relative;
+}
+
+.banner__info {
+    background-color: black;
+    color: white;
+    padding-top: 25vh;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 40px;
+    width: 300px;
+}
+
+.banner__search {
+    display: flex;
+    flex-direction: column;
+}
+
+.banner__searchButton {
+    background-color: white !important;
+    font-weight: 900 !important;
+    text-transform: inherit !important;
+    color: #ff7779 !important;
+}
+
+.banner__info > button {
+    background-color: #ff7779;
+    color: white;
+    text-transform: inherit;
+    margin-top: 20px;
+    font-weight: 600;
+}
+
+.banner__info > h5 {
+    margin-top: 10px;
+}
+
+.banner__info > button:hover {
+    background-color: white;
+    color: #ff7779;
 }
